--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/hasan-promact/getting-started/issues"
   },
-  "homepage": "https://github.com/hasan-promact/getting-started#readme"
+  "homepage": "https://github.com/hasan-promact/getting-started#readme",
+  "devDependencies": {
+    "browser-sync": "^2.24.1",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.5",
+    "run-sequence": "^2.2.1"
+  }
 }
