--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.5",
     "run-sequence": "^2.2.1"
   }
